--- a/public/vishwakarma.html
+++ b/public/vishwakarma.html
@@ -31,7 +31,7 @@
         <li ng-class="{active: SCREENS.active_screen == 'view_logs'}">
             <a href="javascript:void(0);" ng-click="SCREENS.active_screen = 'view_logs'">Logs</a>
         </li>
-        <li><a href="javascript:void(0);">Docs</a></li>
+        <li onclick="window.location = '/docs.html'"><a href="javascript:void(0);">Docs</a></li>
         <li><a href="javascript:void(0);">About</a></li>
       </ul>
     </nav>
