--- a/public/docs.html
+++ b/public/docs.html
@@ -54,11 +54,11 @@
             <h3>Introduction</h3>
 
             <p>
-                Vishwakarma Build System is built completely on top of Node JS. It is designed to be super fast and hassle-free. The project is fully Open Source and can be found here
+                Vishwakarma Build System is built completely on top of Node JS. It is designed to be super fast and hassle-free. The project is fully Open Source and can be found <a href="https://github.com/baliganikhil/vishwakarma" target="_blank">here</a>
             </p>
 
             <p>
-                The name Vishwakarma was chosen because Vishwakarma was the celestial architect and builder of the <em>devas</em> as per Hindu Mythology
+                The name Vishwakarma was chosen because Vishwakarma is the celestial architect and builder of the <em>devas</em> as per Hindu Mythology
             </p>
 
             <p>
