--- a/public/vishwakarma.html
+++ b/public/vishwakarma.html
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="javascript:void(0);" class="navbar-brand">
+      <a href="https://twitter.com/Gulagulaananda" class="navbar-brand">
         <img src="/images/gulagulaananda.jpg" style="width: 30px;">Vishwakarma Build System
       </a>
     </div>
