--- a/public/vishwakarma.html
+++ b/public/vishwakarma.html
@@ -24,6 +24,9 @@
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav pull-right">
+        <li>
+            <a href="javascript:void(0);">(logged in as: {{SIGNIN.username}})</a>
+        </li>
         <li ng-class="{active: SCREENS.active_screen == 'view_projects'}">
             <a href="javascript:void(0);" ng-click="SCREENS.active_screen = 'view_projects'">Home</a>
         </li>
