--- a/public/bootstrap.html
+++ b/public/bootstrap.html
@@ -7,7 +7,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
     <title>Vishwakarma Build System</title>
 </head>
-<body class="container" ng-controller="VKController">
+<body class="container" ng-controller="VKController" ng-cloak>
 <header class="navbar navbar-static-top bs-docs-nav row" id="top" role="banner">
   <div class="container">
     <div class="navbar-header">
@@ -114,6 +114,7 @@
 </div>
 
 <script src="javascripts/socket.io.min.js"></script>
+<script type="text/javascript" src="javascripts/config.js"></script>
 <script type="text/javascript" src="javascripts/vishwakarma.js"></script>
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 
