--- a/public/vishwakarma.html
+++ b/public/vishwakarma.html
@@ -635,6 +635,7 @@
     </div>
 </div>
 
+<script type="text/javascript" src="javascripts/config.js"></script>
 <script type="text/javascript" src="javascripts/vishwakarma.js"></script>
 
 <script src="/socket.io/socket.io.js"></script>
