--- a/public/vishwakarma.html
+++ b/public/vishwakarma.html
@@ -34,7 +34,7 @@
             <a href="javascript:void(0);" ng-click="SCREENS.active_screen = 'view_logs'">Logs</a>
         </li>
         <li onclick="window.location = '/docs.html'"><a href="javascript:void(0);">Docs</a></li>
-        <li><a href="javascript:void(0);">About</a></li>
+        <li><a href="/about.html">About</a></li>
         <li class="username">
             <a href="javascript:void(0);">{{SIGNIN.username}} <i class="fa fa-sort-down"></i></a>
             <ul class="user_menu">
