--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h1>
 <a name="vishwakarma-build-system" class="anchor" href="#vishwakarma-build-system"><span class="octicon octicon-link"></span></a>Vishwakarma Build System</h1>
 
-<hr><p>Vishwakarma Build System is built completely on top of Node JS. It is designed to be super fast and hassle-free..</p>
+<p>Vishwakarma Build System is built completely on top of Node JS. It is designed to be super fast and hassle-free..</p>
 
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
@@ -62,7 +62,7 @@ npm start
 <h2>
 <a name="docs" class="anchor" href="#docs"><span class="octicon octicon-link"></span></a>Docs</h2>
 
-<p>Vishwakarma comes with documentation to help you manage everything from here on.</p>
+<p>Vishwakarma comes with documentation to help you manage everything from here on. (http://localhost:8080/docs.html)</p>
 
 <h2>
 <a name="version" class="anchor" href="#version"><span class="octicon octicon-link"></span></a>Version</h2>
