--- a/public/vishwakarma.html
+++ b/public/vishwakarma.html
@@ -406,7 +406,7 @@
             </div>
         </div>
 
-        <!--<a href="javascript:void(0);" class="pull-right" ng-click="SCREENS.login_mode = 'register'" ng-show="SCREENS.login_mode == 'login'">Register for an account</a>-->
+        <a href="javascript:void(0);" class="pull-right" ng-click="SCREENS.login_mode = 'register'" ng-show="SCREENS.login_mode == 'login'">Register for an account</a>
         <a href="javascript:void(0);" class="pull-right" ng-click="SCREENS.login_mode = 'login'" ng-show="SCREENS.login_mode == 'register'">I already have an account</a>
       </div>
       <div class="modal-footer">
