--- a/public/docs.html
+++ b/public/docs.html
@@ -97,6 +97,13 @@
     },
     "local": {
         "server": "http://localhost:8080"
+    },
+    "logs": {
+        "save": true,
+        "path": "/tmp/logs"
+    },
+    "account": {
+        "create": "true"
     }
 }
 
