--- a/public/docs.html
+++ b/public/docs.html
@@ -100,7 +100,8 @@
     },
     "logs": {
         "save": true,
-        "path": "/tmp/logs"
+        "path": "/tmp/",
+        "retain": 10
     },
     "account": {
         "create": "true"
